--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/logo.png" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="qLnHhIXeMAmBziKg2oKO4XsALvo15pfc6ZfIyTHWaik" />
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
