Fix page title to 'The Age Of Genz'

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
     <!-- ✅ ENHANCED GEO: Optimized title and meta for AI understanding -->
-    <title>The Age of GenZ</title>
+    <title>The Age of Genz</title>
     <meta name="description" content="The Age of GenZ delivers NEWS YOU CAN VIBE WITH - breaking news, politics, culture & AI technology from a generational perspective. Covering US, Europe & Asia for ages 18-35 and beyond." />
     
     <!-- 🔥 BRAND RECOGNITION: Added critical brand meta tags -->
