fix: update index.html and add service worker

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
     <link rel="preconnect" href="https://googletagservices.com" crossorigin>
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+    <link rel="dns-prefetch" href="https://ageofgenz-backend.onrender.com">
+    <link rel="preconnect" href="https://ageofgenz-backend.onrender.com" crossorigin>
     
     <!-- ✅ FAVICON: Complete favicon setup -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
