SEO fix: enforce non-www canonical, add redirects

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="bingbot" content="index, follow" />
-    <link rel="canonical" href="https://www.theageofgenz.com" />
+    <link rel="canonical" href="https://theageofgenz.com/" />
     <meta property="og:site_name" content="The Age of GenZ" />
     <meta property="og:title" content="The Age of GenZ | NEWS YOU CAN VIBE WITH" />
     <meta property="og:description" content="The Age of GenZ delivers NEWS YOU CAN VIBE WITH - breaking news, politics, culture & technology from a generational perspective." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.theageofgenz.com" />
-    <meta property="og:image" content="https://www.theageofgenz.com/og-image.jpg" />
+    <meta property="og:url" content="https://theageofgenz.com" />
+    <meta property="og:image" content="https://theageofgenz.com/og-image.jpg" />
     <meta property="og:image:alt" content="The Age of GenZ logo" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -73,11 +73,11 @@
     <meta name="twitter:creator" content="@TheAgeOfGenZ" />
     <meta name="twitter:title" content="The Age of GenZ | NEWS YOU CAN VIBE WITH" />
     <meta name="twitter:description" content="The Age of GenZ delivers NEWS YOU CAN VIBE WITH - breaking news, politics, culture & technology from a generational perspective." />
-    <meta name="twitter:image" content="https://www.theageofgenz.com/twitter-card.jpg" />
+    <meta name="twitter:image" content="https://theageofgenz.com/twitter-card.jpg" />
     <meta name="twitter:image:alt" content="The Age of GenZ logo" />
-    <link rel="alternate" hreflang="en" href="https://www.theageofgenz.com" />
-    <link rel="alternate" hreflang="x-default" href="https://www.theageofgenz.com" />
-    <link rel="alternate" type="application/rss+xml" title="The Age of GenZ RSS Feed" href="https://www.theageofgenz.com/rss.xml" />
+    <link rel="alternate" hreflang="en" href="https://theageofgenz.com" />
+    <link rel="alternate" hreflang="x-default" href="https://theageofgenz.com" />
+    <link rel="alternate" type="application/rss+xml" title="The Age of GenZ RSS Feed" href="https://theageofgenz.com/rss.xml" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     <script type="application/ld+json">
     {
@@ -85,46 +85,46 @@
       "@graph": [
         {
           "@type": "Organization",
-          "@id": "https://www.theageofgenz.com/#organization",
+          "@id": "https://theageofgenz.com/#organization",
           "name": "The Age Of GenZ",
-          "url": "https://www.theageofgenz.com",
+          "url": "https://theageofgenz.com",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://www.theageofgenz.com/logo.png",
+            "url": "https://theageofgenz.com/logo.png",
             "width": 512,
             "height": 512
           },
           "description": "The Age of GenZ delivers news you can vibe with: breaking news, politics, culture & technology from a generational perspective.",
           "sameAs": [
-            "https://www.theageofgenz.com"
+            "https://theageofgenz.com"
           ]
         },
         {
           "@type": "WebSite",
-          "@id": "https://www.theageofgenz.com/#website",
-          "url": "https://www.theageofgenz.com",
+          "@id": "https://theageofgenz.com/#website",
+          "url": "https://theageofgenz.com",
           "name": "The Age Of GenZ",
           "description": "Breaking news, politics, culture & tech from a generational perspective. NEWS YOU CAN VIBE WITH.",
           "publisher": {
-            "@id": "https://www.theageofgenz.com/#organization"
+            "@id": "https://theageofgenz.com/#organization"
           },
           "inLanguage": "en-US",
           "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://www.theageofgenz.com/search?q={search_term_string}",
+            "target": "https://theageofgenz.com/search?q={search_term_string}",
             "query-input": "required name=search_term_string"
           }
         },
         {
           "@type": "WebPage",
-          "@id": "https://www.theageofgenz.com/#homepage",
-          "url": "https://www.theageofgenz.com",
+          "@id": "https://theageofgenz.com/#homepage",
+          "url": "https://theageofgenz.com",
           "name": "The Age of GenZ | NEWS YOU CAN VIBE WITH",
           "isPartOf": {
-            "@id": "https://www.theageofgenz.com/#website"
+            "@id": "https://theageofgenz.com/#website"
           },
           "about": {
-            "@id": "https://www.theageofgenz.com/#organization"
+            "@id": "https://theageofgenz.com/#organization"
           },
           "description": "The Age of GenZ delivers NEWS YOU CAN VIBE WITH - breaking news, politics, culture & technology from a generational perspective.",
           "inLanguage": "en-US"
